log/build_2022-08-20_23-04-15/flody_test_suite/stderr.log
  File "/home/daeho/practice_ws/install/flody_test_suite/lib/python3.10/site-packages/flody_test_suite/flody_test_suite_node.py", line 89
    else :
    ^^^^
SyntaxError: invalid syntax

